# a-gis

./: .bumpversion.cfg  .cursorignore  .cursorrules  .gitignore  MANIFEST.in  README.md  a_gis.sh  dev.sh  history.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini  tree.sh  vscode.env
.cursor/rules/: core.mdc  memory-bank.mdc  system-patterns.mdc
.github/workflows/: test.yml
A_GIS/: __init__.py  __main__.py
A_GIS/Code/: __init__.py
A_GIS/Code/Docstring/: __init__.py
A_GIS/Code/Docstring/get/: __init__.py
A_GIS/Code/Docstring/modify/: __init__.py
A_GIS/Code/Tree/: __init__.py
A_GIS/Code/Tree/print/: __init__.py
A_GIS/Code/Tree/recurse/: __init__.py
A_GIS/Code/Tree/update/: __init__.py
A_GIS/Data/Json/: __init__.py
A_GIS/Data/Llm/: __init__.py
A_GIS/File/: __init__.py
A_GIS/File/Directory/: __init__.py
A_GIS/File/open/: __init__.py
A_GIS/File/read/: __init__.py
A_GIS/File/write/: __init__.py
A_GIS/Image/: __init__.py
A_GIS/Image/Metadata/: __init__.py
A_GIS/Image/new/: __init__.py
A_GIS/Image/open/: __init__.py
A_GIS/Math/: __init__.py
A_GIS/Text/: __init__.py
A_GIS/Text/apply_patch/: __init__.py
A_GIS/Text/get_patch/: __init__.py
A_GIS/image/: __init__.py
a_gis/: __init__.py
a_gis/image/: purify.py
docs/: conf.py  index.rst
docs/api/: A_GIS.Ai.Chatbot.chat.rst  A_GIS.Ai.Chatbot.get_info.rst  A_GIS.Ai.Chatbot.init.rst  A_GIS.Ai.Chatbot.list_models.rst  A_GIS.Ai.Chatbot.rst  A_GIS.Ai.Llm.download.rst  A_GIS.Ai.Llm.rst  A_GIS.Ai.rst  A_GIS.Cli.distill.rst  A_GIS.Cli.get_console_width.rst  A_GIS.Cli.get_git_status.rst  A_GIS.Cli.get_name_and_path.rst  A_GIS.Cli.register.rst  A_GIS.Cli.rst  A_GIS.Cli.run_git.rst  A_GIS.Cli.update_and_show_git_status.rst  A_GIS.Code.CommitMessage.generate.rst  A_GIS.Code.CommitMessage.rst  A_GIS.Code.Docstring.check_short_description.rst  A_GIS.Code.Docstring.clean.rst  A_GIS.Code.Docstring.clean.tests.rst  A_GIS.Code.Docstring.fix_short_description.rst  A_GIS.Code.Docstring.generate.rst  A_GIS.Code.Docstring.get.rst  A_GIS.Code.Docstring.init.rst  A_GIS.Code.Docstring.modify.rst  A_GIS.Code.Docstring.reformat.rst  A_GIS.Code.Docstring.reformat.tests.rst  A_GIS.Code.Docstring.rst  A_GIS.Code.Docstring.to_string.rst  A_GIS.Code.Tree.get.rst  A_GIS.Code.Tree.init.rst  A_GIS.Code.Tree.init_from_file.rst  A_GIS.Code.Tree.print.rst  A_GIS.Code.Tree.recurse.rst  A_GIS.Code.Tree.rst  A_GIS.Code.Tree.to_json.rst  A_GIS.Code.Tree.to_string.rst  A_GIS.Code.Tree.update.rst  A_GIS.Code.Tree.update_path_to_package.rst  (+245 more)
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
notebooks/: RAG_Demo.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  ai-coding.ipynb  check-blocks.ipynb  code-similarity.ipynb  image-similarity.ipynb  kg.html  o.html  o.json  o.xhtml  open-from-url.ipynb  output.html  output.md  roundtrip.ipynb  stats.ipynb  text-processing.ipynb  tree.ipynb  w-distribution.ipynb  x.ipynb  xyz.txt
source/A_GIS/: __init__.py  __main__.py
source/A_GIS/Ai/: __init__.py
source/A_GIS/Cli/: __init__.py
source/A_GIS/Code/: __init__.py
source/A_GIS/Conversation/: __init__.py
source/A_GIS/Data/: __init__.py
source/A_GIS/Dev/: __init__.py
source/A_GIS/Document/: __init__.py
source/A_GIS/File/: __init__.py
source/A_GIS/Image/: __init__.py
source/A_GIS/Log/: __init__.py
source/A_GIS/Math/: __init__.py
source/A_GIS/Text/: __init__.py
source/A_GIS/Time/: __init__.py
source/A_GIS/Visual/: __init__.py
source/A_GIS/catalog/: __init__.py  __main__.py
source/A_GIS/resolve_function/: __init__.py
source/E_GIS/: README.md  __init__.py
source/E_GIS/sha256_9ba676f506954f0fa7093aa63c4e72ff6f666101bf39150d86d5199c9ab4a9eb___Code__find_root/: __init__.py
source/_EGIS/: __init__.py
source/_EGIS/sha256_5209dfd9cf44793848f792557c41d1dc914ce9c78dcfcacf8f62077cc1a8c206/: __init__.py
source/_EGIS/sha256_596a4b002cad478105193be4bf016060ec12099e75e29fd63181e546f1cd5f2a/: __init__.py
source/_EGIS/sha256_e8ee68ecc678ccd269a885648cce920d08da4ba3643e138f4bf81532c28eed42/: __init__.py
src/a_gis/: __init__.py  image.py
tests/: test_image.py  test_module1.py
(+437 files in other folders)
