[project]
name = "A_GIS"
version = "0.6.1"
description = "Functional python that shields users from breaking changes."
authors = [
    { name = "AEGIS 001", email = "a-gis-001@proton.me" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["art", "AI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "matplotlib",
    "scipy",
    "numpy",
    "pytest",
    "pytest-xdist",
    "pydantic",
]
requires-python = ">=3.10"

[project.urls]
documentation = "https://a-gis.readthedocs.io"
bug-tracker = "https://github.com/a-gis-001/a-gis/issues"
source = "https://github.com/a-gis-001/a-gis"

#Complains about
# Traceback (most recent call last):
#   File "/Users/ww5/a_gis/a-gis/venv/bin/a_gis", line 5, in <module>
#     from A_GIS.__main__ import main
# ModuleNotFoundError: No module named 'A_GIS.__main__'
#Workaround just use ./a-gis.sh to reformat.
#[project.scripts]
#a-gis = "A_GIS.__main__:main"

[tool.setuptools.packages.find]
include = ["A_GIS.*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
